@@ -9,16 +9,19 @@ hildon-libs (0.14.0) unstable; urgency=low
   * fixes NB#37172 - Colour selector for background color shows logical string
   * fixes NB#37467 - Hildon name password dialog with autocapitalization
   * fixes NB#34613 - 'Cancel' and 'Finish' in wrong order in Wizard widget
+  * fixes NB#26114 - hildon_gtk_widget_set_logical_* leak signals
 
   * Merging the new color selector branch (0.13.1) with the main trunk code.
   * Maintainer change: Michael Dominic Kostrzewa <michael.kostrzewa@nokia.com>
   * Correcting the license headers
   * Removing the redundant files
   * Allowing menus to be removed from windows by passing NULL to set_menu
-  function (documented).
+    function (documented).
   * Removing the Johan's new key handling (introduced in 0.13.1.3) for the
-  time being. That requires a fix at a different level.
+    time being. That requires a fix at a different level.
   * Changing the order of the buttons in the wizard dialog
+  * Disconnect the previous notification signal before connecting the new one
+    (hildon_gtk_widget_set_logical_*)
 
  -- Michael Dominic Kostrzewa <michael.kostrzewa@nokia.com>  Wed, 30 Aug 2006 14:30:00 +0300
 
